Approved checking for bug 76372, r=gagan, sr=brendan, a=brendan/chofmann.  Added guards against calls to uninitialized nsCacheEntryHashtable.